[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Liyang <ismeade99@sina.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/ismeade/grrs"
repository = "https://github.com/ismeade/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
